--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body class="bg-dark text-light">
+  <body class="bg-dark text-light p-4">
     <%= render "layouts/navbar" %>
     <%= yield %>
   </body>
