--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Messages</h1>
 <hr>
+<h5><%= link_to("Send Message",new_message_path) %></h5>
 <table class="table">
   <% @messages.each do |message| %>
     <tr>
