--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1 class="bg-dark text-light"><%= @user.first_name+" "+@user.last_name %></h1>
+<p><%= "ID tag: "+@user.id.to_s %></p>
 <ul class="bg-dark text-success h5">
   <li><%= "email: "+@user.email %></li>
 </ul>
