--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,6 +1,18 @@
 <h1>Chat</h1>
 <h2 class="bg-dark text-light"><%= "Chat started by "+User.find(@chat.sender_id).first_name+" by sending a message to "+User.find(@chat.receiver_id).first_name %></h2>
+<h3>Messages Sent</h3>
+<h5><%= "Chat ID: "+@chat.id.to_s %></h5>
+<table class="table">
+  <% @messages.each do |m| %>
+    <tr>
+      <td class="bg-dark text-primary">
+        <%= "- ["+User.find(m.user_id).first_name+" "+User.find(m.user_id).last_name+"] sent: "+m.body %>
+      </td>
+    </tr>
+  <% end %>
+</table>
 <br>
 <br>
 <br>
+<%= link_to("Edit",edit_chat_path(@chat)) %>
 <%= link_to("Back to chats",chats_path) %>
