--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,10 +1,12 @@
 <h1>Message</h1>
 <ul class="bg-dark text-success h5">
   <li><%= "sent to chat of ID: "+@message.chat_id.to_s %></li>
-  <li><%= "By user of ID: "+@message.user_id.to_s %></li>
+  <li><%= "By user: "+@user.first_name.to_s %></li>
+  <li><%= "Of ID: "+@user.id.to_s %></li>
   <li><%= "Content: "+@message.body %></li>
 </ul>
 <br>
 <br>
 <br>
+<%= link_to("Edit",edit_message_path(@message)) %>
 <%= link_to("Back to messages",messages_path) %>
