functional but ugly

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
   <li><%= "email: "+@user.email %></li>
 </ul>
 <br>
+<%= render "users/ch" %>
+<br>
 <br>
 <br>
 <%= link_to("Edit",edit_user_path(@user)) %>
