--- a/app/views/chats/_form.html.erb
+++ b/app/views/chats/_form.html.erb
@@ -1,7 +1,6 @@
 <div>
   <%= form_with model: @chat do |f| %>
-    <h4>Sender ID tag</h4>
-    <%= f.select :sender_id, options_for_select(@users, params[:sender_id]) %>
+    <%= f.hidden_field :sender_id %> 
     <h4>Receiver ID tag</h4>
     <%= f.select :receiver_id, options_for_select(@users, params[:receiver_id]) %>
 
