--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,4 +2,13 @@
   <%= link_to("Users",users_path) %>
   <%= link_to("Chats",chats_path) %>
   <%= link_to("Messages",messages_path) %>
+  -
+  <% if !user_signed_in? %>
+    <%= link_to("Sign up",new_user_registration_path) %>
+    <%= link_to("Sign in",new_user_session_path) %>
+  <% end %>
+
+  <% if user_signed_in? %>
+    <%= link_to("Sign out",destroy_user_session_path,data: {turbo_method: :delete}) %>
+  <% end %>
 </div>
