--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -2,12 +2,11 @@
   <%= form_with model: @message do |f| %>
     <h4>Chat ID tag</h4>
     <%= f.select :chat_id, options_for_select(@chats, params[:chat_id]) %>
-    <h4>Author ID tag</h4>
-    <%= f.select :user_id, options_for_select(@users, params[:user_id]) %>
+    <%= f.hidden_field :user_id %> 
     <br>
     <h4>Message:</h4>
     <%= f.text_field :body, placeholder: "Hello", :size => 100, required: true %>
-
+    
     <br>
     <br>
     <%= f.submit "Send", class: "btn btn-primary" %>
