--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -14,5 +14,7 @@
 <br>
 <br>
 <br>
-<%= link_to("Edit",edit_chat_path(@chat)) %>
+<% if can? :edit, @chat %>
+  <%= link_to("Edit",edit_chat_path(@chat)) %>
+<% end %>
 <%= link_to("Back to chats",chats_path) %>
