--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,5 +8,7 @@
 <br>
 <br>
 <br>
-<%= link_to("Edit",edit_user_path(@user)) %>
+<% if can? :edit, @user %>
+  <%= link_to("Edit",edit_user_path(@user)) %>
+<% end %>
 <%= link_to("Back to users",users_path) %>
