--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,10 @@
 <div class="bg-dark h4 topnav">
-  <%= link_to("Users",users_path) %>
-  <%= link_to("Chats",chats_path) %>
-  <%= link_to("Messages",messages_path) %>
-  -
+  <% if user_signed_in? %>
+    <%= link_to("Users",users_path) %>
+    <%= link_to("My inbox",chats_path) %>
+    <%= link_to("Messages",messages_path) %>
+    -
+  <% end %>
   <% if !user_signed_in? %>
     <%= link_to("Sign up",new_user_registration_path) %>
     <%= link_to("Sign in",new_user_session_path) %>
