--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   <% @users.each do |user| %>
     <tr>
       <td class="bg-dark text-primary">
-        <%= link_to(user.first_name,user_path(user)) %>
+        <%= link_to(user.first_name+" "+user.last_name,user_path(user)) %>
       </td>
     </tr>
   <% end %>
