--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <br>
 <br>
 <br>
-<% if can? :edit, @user %>
+<% if can? :update, @user %>
   <%= link_to("Edit",edit_user_path(@user)) %>
 <% end %>
 <%= link_to("Back to users",users_path) %>
